--- a/BookingSystem/BookingSystem.csproj
+++ b/BookingSystem/BookingSystem.csproj
@@ -142,7 +142,7 @@
       <DependentUpon>202005202029518_Users.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\Authorization.cs" />
+    <Compile Include="Models\UserSystem.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
