--- a/BookingSystem/bin/BookingSystem.dll.config
+++ b/BookingSystem/bin/BookingSystem.dll.config
@@ -64,6 +64,6 @@
 
 	<connectionStrings>
 		<add name="ConnectionString"
-		     connectionString="Data Source=localhost; Initial Catalog=BookingSystem; MultipleActiveResultSets=True;  Pooling = true; User Id=sa; Password=123456789Aa; Max Pool Size = 100; Async = true"  providerName="System.Data.SqlClient"/>
+		     connectionString="Data Source=localhost; Initial Catalog=BookingSystem; MultipleActiveResultSets=True;  Pooling = true; User Id=sa; Password=motherlode; Max Pool Size = 100; Async = true"  providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
